# tatl

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: git.rs  main.rs  message.rs  notify.rs  prompt.rs  provider.rs  tui.rs
