[package]
name = "tatl"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
git2 = "0.20.1"
ratatui = "0.29.0"
rig-core = "0.11.0"
tokio = { version = "1.44.2", features = ["full"] }
